--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,15 @@
 			</a>
 		{% endif %}
 
+		{% if site.facebook_url %}
+		<a href="{{ site.facebook_url }}">
+				<span class="fa-stack fa-1x">
+					<i class="socialIconBack fas fa-circle fa-stack-2x"></i>
+					<i class="socialIconTop fab fa-facebook fa-stack-1x"></i>
+				</span>
+		</a>
+		{% endif %}
+
 		{% if site.twitter_username %}
 			<a href="https://twitter.com/{{ site.twitter_username }}">
 				<span class="fa-stack fa-1x">
@@ -29,6 +38,15 @@
 					<i class="socialIconTop fab fa-instagram fa-stack-1x"></i>
 				</span>
 			</a>
+		{% endif %}
+
+		{% if site.tiktok_username %}
+		<a href="https://www.tiktok.com/@{{ site.tiktok_username }}">
+				<span class="fa-stack fa-1x">
+					<i class="socialIconBack fas fa-circle fa-stack-2x"></i>
+					<i class="socialIconTop fab fa-tiktok fa-stack-1x"></i>
+				</span>
+		</a>
 		{% endif %}
 
 		{% if site.mastodon_link %}
