--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
 	{% if site.your_name %}
 	<p class="footerText">Made by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
 	{% endif %}
+	<p class="footerText"><a href="{{ site.appstore_link }}">Join us today</a></p>
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
