--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -16,7 +16,7 @@
 }
 
 .headerBackground {
-	height: 0px; // 115px
+	height: 115px; // 115px // 0px
 	background-color: rgba($header-color, $header-transparency);
 }
 
